// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlexTile/> rendering simple tile with default props to match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #DBDBDB;
  border-radius: 16px;
  padding: 12px;
  color: #151515;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`<FlexTile/> rendering simple tile with test props to match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #DBDBDB;
  border-radius: 16px;
  padding: 12px;
  color: #151515;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="c0"
  >
    <div
      role="test"
    >
      wen lambo
    </div>
  </div>
</DocumentFragment>
`;
